# ROS2_omnibot

./: README.md
install/: local_setup.sh  setup.sh
install/omnibot_control/lib/omnibot_control/: robot_control
install/omnibot_control/share/omnibot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/omnibot_control/share/omnibot_control/launch/: robot_control.launch.py
install/omnibot_ignition/include/omnibot_ignition/: omni_drive.hpp
install/omnibot_ignition/share/omnibot_ignition/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omnibot_ignition/share/omnibot_ignition/cmake/: ament_cmake_export_dependencies-extras.cmake
install/omnibot_ignition/share/omnibot_ignition/launch/: spawn_turtlebot3.launch.py
install/omnibot_ignition/share/omnibot_ignition/params/: omni_control_config.yaml  omni_sub_config.yaml
install/omnibot_ignition/share/omnibot_ignition/urdf/: omni_bot.urdf  omni_bot_1.sdf
log/: latest_build
src/omnibot_control/: package.xml  setup.cfg  setup.py
src/omnibot_control/launch/: robot_control.launch.py
src/omnibot_control/omnibot_control/: robot_control.py
src/omnibot_ignition/: CMakeLists.txt
src/omnibot_ignition/include/omnibot_ignition/: omni_drive.hpp
src/omnibot_ignition/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  spawn_turtlebot3_backup.launch.py
src/omnibot_ignition/params/: omni_control_config.yaml  omni_sub_config.yaml
src/omnibot_ignition/src/: omni_drive.cpp
src/omnibot_ignition/urdf/: omni_bot.sdf  omni_bot_2.sdf  omni_bot_3.sdf
src/omnibot_ignition/urdf/xacro_files/: omni_bot.xacro  rim.xacro
